scroll rail mostly working

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,12 +1,13 @@
-.zddScrollbarRail
+
+.zdd-scrollbar-rail
   position: absolute
-  width: 8px
+  width: 12px
   height: 100%
   background-color: rgba(98, 98, 98, 0.5)
   right: 5px
   top: 0
 
-.zddScrollbarThumb
+.zdd-scrollbar-thumb
   position: relative
   transform: translateY(-50%)
   width: 150%
