--- a/demo/template/body.jade
+++ b/demo/template/body.jade
@@ -6,7 +6,7 @@ ul(zdd-scroll-repeat="range")
     .color {{thing.color}}
     
 ul(zdd-scroll-repeat="range2 || (range2={length:3})")
-  li(ng-repeat="thing in thingies | zddScrollFilter:range2"
+  li(ng-repeat="thing in thingies | limitTo:limit | zddScrollFilter:range2"
     ng-style="{backgroundColor: thing.color}")
     .id {{thing.id}}
     .name {{thing.name}}
