Scrollbar hides when nothing to scroll

--- a/src/template.jade
+++ b/src/template.jade
@@ -1,2 +1,3 @@
-.zdd-scrollbar-rail
+.zdd-scrollbar-rail(
+  ng-show="zddScrollRepeat.collection.length > zddScrollRepeat.length")
   .zdd-scrollbar-thumb
