Fixed scrolldistance because firefox is hilarious

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -5,6 +5,7 @@
   background-color: rgba(98, 98, 98, 0.5)
   right: 5px
   top: 0
+  user-select: none
 
 .zdd-scrollbar-thumb
   position: relative
@@ -14,3 +15,4 @@
   background-color: rgb(0, 0, 0)
   border-radius: 20%
   margin-left: -25%
+  user-select: none
